Fix Safari spacing issue

--- a/frontend/src/stylesheet/components/_sidebar.scss
+++ b/frontend/src/stylesheet/components/_sidebar.scss
@@ -33,7 +33,6 @@
 
 .sidebar-menu-item {
   min-height: 30px;
-  height: 100%;
   padding: 5px 20px;
   font-weight: 600;
   display: flex;
